--- a/game1/game1.vcxproj
+++ b/game1/game1.vcxproj
@@ -153,7 +153,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animal.h" />
+    <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Person.h" />
+    <ClInclude Include="Uncopyable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
