--- a/game1/game1.vcxproj.filters
+++ b/game1/game1.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="Animal.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Uncopyable.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
