--- a/game1/game1.vcxproj.filters
+++ b/game1/game1.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="LinkedList.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SinglyLinkedListEx.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
