--- a/game1/game1.vcxproj.filters
+++ b/game1/game1.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClInclude Include="SinglyLinkedListEx.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Stack.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Tree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
